# PhotoVideo-Manager-With_Compression

./: README.md  pyproject.toml  requirements.txt
cloud_file_manager/: .env  admin.py  app.py  app_factory.py  extensions.py
cloud_file_manager/downloads/: README.md
cloud_file_manager/services/: google_cloud_storage.py
cloud_file_manager/templates/: about.html  view_file_details.html
